# liftly

./: .eslintignore  .gitignore  .prettierignore  eslint.config.js  flatten.md  package.json  pnpm-lock.yaml  signed-app.apk.idsig
exercices-data/: exercises.json
scripts/: generate-exercise-assets.mjs
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  error.rs  lib.rs
src-tauri/src/api/: exercise.rs  mod.rs  workout.rs
src-tauri/src/commands/: api1.rs  api2.rs  error.rs  execises.rs  mod.rs  workout.rs
src-tauri/src/db/: connection.rs  migration.rs  mod.rs  seed.rs
src-tauri/src/db/resources/: 0001_init.sql
src-tauri/src/db/resources/sql/: 0001_init.sql
src-tauri/src/domain/: exercise.rs  mod.rs  workout.rs
src-tauri/src/models/: exercise.rs  mod.rs  pagination.rs  workout.rs  workout_set.rs
src-tauri/src/repository/: exercise.rs  mod.rs  workout.rs
src/lib/: bindings.ts
src/lib/actions/: index.ts  on-visible.action.ts
src/lib/components/: ExerciseImage.svelte  exercise-image.svelte  exercise-row-item.svelte  exercise-search.svelte
src/lib/composables/: index.ts  usePaginatedSearch.svelte.ts
src/lib/services/: drawer.service.svelte.ts  index.ts  logging.service.ts  native-bridge.service.ts  workout.service.svelte.ts
src/lib/taurpc/: index.ts  taurpc.ts  types.ts
src/lib/utils/: datetime.ts  index.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/active-workout/: +page.svelte
static/exercises/: manifest.json
(+36 files in other folders)
