[package]
name = "liftly"
version = "0.1.0"
description = "Liftly App"
authors = ["brequet"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "liftly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "export-bindings"
path = "src/bin/export_bindings.rs"

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["chrono", "sqlite"] }
once_cell = "1.21.3"
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.16"
